--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,3 +11,42 @@ body{
   background-color: $primary-color;
   font-family: $font-stack;
 }
+
+nav{
+  inline-size: 100%;
+  padding-block: 2rem;
+  padding-inline: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: center;
+  gap: 1.5rem;
+
+  .nav-title{
+    text-decoration: none;
+    font-size: 1.25rem;
+    color: $primary-text-color;
+
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+
+  .nav-list{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+
+    .nav-img{
+      display: block;
+    }
+  }
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    gap: 0;
+  }
+}
